Replace a bunch of Guava stuff with Java APIs