@@ -25,10 +25,10 @@
 package net.fabricmc.loom.build.mixin;
 
 import java.io.File;
+import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
 
-import com.google.common.collect.ImmutableList;
 import org.gradle.api.Project;
 import org.gradle.api.tasks.SourceSet;
 import org.gradle.api.tasks.TaskProvider;
@@ -41,7 +41,7 @@ public class GroovyApInvoker extends AnnotationProcessorInvoker<GroovyCompile> {
 	public GroovyApInvoker(Project project) {
 		super(
 				project,
-				ImmutableList.of(),
+				List.of(),
 				getInvokerTasks(project),
 				AnnotationProcessorInvoker.GROOVY);
 	}
